Fix: Refactor all pages css and edit resposiveness and visibility

--- a/frontend/src/components/Shared/Navbar.css
+++ b/frontend/src/components/Shared/Navbar.css
@@ -6,7 +6,8 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid var(--border-color);
-    height: 1%;
+    min-height: 75px;
+    max-height: 80px;
 }
 
 .navbar-right {
