--- a/frontend/src/pages/Auth/SignUpPage.css
+++ b/frontend/src/pages/Auth/SignUpPage.css
@@ -1,12 +1,15 @@
 /* AuthForm.css */
 .auth-container {
     display: flex;
-    height: 90vh;
+    height: calc(100vh-80px);
     background-color: var(--bg-color);
     justify-content: space-between;
 }
 
 .auth-slideshow {
+    position: relative;
+
+    overflow: hidden;
     flex: 1;
     max-width: 49%;
     background-size: cover;
@@ -15,6 +18,27 @@
     margin: 2rem;
     border-radius: 1.4rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.back-to-website-btn {
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    color: white;
+    padding: 8px 20px;
+    border-radius: 25px;
+    text-decoration: none;
+    font-size: 0.9rem;
+    transition: all 0.3s ease;
+    backdrop-filter: blur(2px);
+}
+
+.back-to-website-btn:hover {
+    background: var(--primary-accent-hover);
+    border-color: white;
+    transform: translateY(-1px);
 }
 
 .doc {
@@ -53,6 +77,7 @@
     margin-bottom: 1.5rem;
     position: relative;
 }
+
 .name-fields-row {
     display: flex;
     gap: 15px;
@@ -72,53 +97,33 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 8px; /* Space between input and error messages */
-  }
-  
-  .password-toggle {
+    gap: 8px;
+    /* Space between input and error messages */
+}
+
+.password-toggle {
     position: absolute;
     right: 12px;
-    top: 17%; /* Adjust this value based on your input height */
+    top: 17%;
+    /* Adjust this value based on your input height */
     transform: translateY(-50%);
     /* rest of the styles remain the same */
-  }
-  
-  .password-group input {
+}
+
+.password-group input {
     padding-right: 40px !important;
-    margin-bottom: 0; /* Remove any existing bottom margin */
-  }
-  
-  .password-error-list {
+    margin-bottom: 0;
+    /* Remove any existing bottom margin */
+}
+
+.password-error-list {
     margin-top: 4px;
     padding-left: 20px;
-  }
+}
 
-  
 
-.back-to-website-btn {
-    position: absolute;
-    top: 20px;
-    left: 450px;
-    background: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    color: white;
-    padding: 8px 20px;
-    border-radius: 25px;
-    text-decoration: none;
-    font-size: 0.9rem;
-    transition: all 0.3s ease;
-    backdrop-filter: blur(2px);
-  }
-  
-  .back-to-website-btn:hover {
-    background: rgba(255, 255, 255, 0.1);
-    border-color: white;
-    transform: translateY(-1px);
-  }
-  
-  .auth-slideshow {
-    position: relative; 
-  }
+
+
 
 .form-group input {
     width: 100%;
@@ -170,7 +175,7 @@
 }
 
 .social-login {
-    margin-top: 2rem;
+    margin-top: auto;
 }
 
 .divider {
@@ -247,4 +252,14 @@
 
 .password-error-list li {
     color: red;
+}
+
+@media (max-width: 1000px) {
+    .auth-slideshow {
+        display: none;
+    }
+
+    .doc {
+        margin: auto;
+    }
 }
